# omq.rs

./: .gitignore  BENCHMARKS.md  BENCHMARKS_COMPRESSION.md  CHANGELOG.md  CLAUDE.md  COMPARISONS.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  README.md  SECURITY.md  clippy.toml  release-plz.toml
bindings/pyomq/: .chart_hw  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  WINDOWS.md  pyproject.toml
bindings/pyomq/doc/: architecture.md  performance.md
bindings/pyomq/scripts/: update_perf.py
bindings/pyomq/src/: auth.rs  blake3zmq_auth.rs  constants.rs  context.rs  conversions.rs  dispatch.rs  error.rs  lib.rs  notification.rs  notify.rs  options.rs  peer_info.rs  runtime.rs  socket.rs  socket_async.rs
bindings/pyomq/tests/: conftest.py  test_async.py  test_async_auth.py  test_async_compat.py  test_async_interop.py  test_basic.py  test_blake3zmq.py  test_blake3zmq_auth.py  test_compat.py  test_connect_before_bind.py  test_curve.py  test_curve_auth.py  test_device.py  test_exceptions.py  test_fork.py  test_inproc_namespace.py  test_inproc_throughput.py  test_interop.py  test_perf.py  (+15 more)
blume/: CHANGELOG.md  Cargo.toml  README.md
blume/benches/: throughput.rs
blume/src/: error.rs  lib.rs  receiver.rs  sender.rs  shared.rs  spsc.rs
blume/tests/: basic.rs  batch.rs  bounded.rs  disconnect.rs  mpsc.rs
examples/zguide-tokio/: Cargo.toml
omq/: CHANGELOG.md  Cargo.toml  README.md
omq-bench/: Cargo.toml
omq-bench/src/: cli.rs  coord.rs  jsonl.rs  main.rs  parse.rs  process.rs
omq-compio/: CHANGELOG.md  Cargo.toml  README.md
omq-compio/benches/: client_server_latency.rs  compression.rs  latency.rs  mechanism.rs  multithread_push_pull.rs  pair.rs  pub_sub.rs  push_pull.rs  push_pull_fanout.rs  req_rep.rs  router_dealer.rs
omq-compio/examples/: profile_ws.rs
omq-compio/src/: lib.rs  local_cell.rs  local_stream.rs  monitor.rs  runtime.rs  sys.rs  unsafe_cell.rs
omq-compio/tests/: blake3zmq.rs  broker.rs  close_under_backpressure.rs  codec_flush_race.rs  conflate.rs  connect_before_bind.rs  connection_errors.rs  coverage_matrix.rs  curve.rs  direct_encode_hwm.rs  dns_resolution.rs  double_close.rs  draft_types.rs  fuzz_parsers.rs  fuzz_socket_actions.rs  handshake_timeout.rs  heartbeat.rs  heartbeat_priority.rs  inproc_mt.rs  inproc_rebind.rs  inproc_subside.rs  interop_pyzmq_curve.rs  interop_ruby.rs  interop_ruby_blake3zmq.rs  ipc_basic.rs  ipv6.rs  large_messages.rs  linger.rs  lz4_tcp.rs  lz4_ws.rs  mixed_transports.rs  monitor.rs  multi_peer.rs  options_polish.rs  peer_churn.rs  pending_drain.rs  plain.rs  pub_sub.rs  pub_sub_sustained_ipc.rs  push_pull.rs  (+39 more)
omq-libzmq/: CHANGELOG.md  Cargo.toml  README.md  WINDOWS.md
omq-libzmq/doc/: performance.md
omq-libzmq/examples/: bench_latency.rs  bench_recv.rs  bench_recv_libzmq.c  bench_zero_copy.rs
omq-libzmq/include/: zmq.h
omq-libzmq/src/: consts.rs  context.rs  curve.rs  error.rs  inproc_bypass.rs  lib.rs  local_cell.rs  msg.rs  notify.rs  opts.rs  poll.rs  proxy.rs  send_recv.rs  socket.rs  util.rs
omq-libzmq/tests/: basic.rs  ctx.rs  draft.rs  fast_path_recovery.rs  fd.rs  libzmq_dealer_router.rs  libzmq_pair_tcp.rs  multipart.rs  opts.rs  poll.rs  proxy.rs  security.rs  transports.rs  xpub_xsub.rs
omq-proto/: CHANGELOG.md  Cargo.toml  README.md
omq-proto/benches/: mechanism_frame.rs
omq-proto/src/: backoff.rs  direct_encode.rs  encoded_queue.rs  endpoint.rs  error.rs  fan_out_batch.rs  fan_out_frame.rs  flow.rs  frame_buffer.rs  handle_frame.rs  inproc.rs  lib.rs  message.rs  monitor.rs  options.rs  routing.rs  socket_api.rs  socket_ref.rs  subscription.rs  type_state.rs
omq-proto/tests/: connection.rs  endpoint.rs
omq-tokio/: CHANGELOG.md  Cargo.toml  README.md
omq-tokio/benches/: client_server_latency.rs  compression.rs  inproc_threads.rs  latency.rs  mechanism.rs  pair.rs  pub_sub.rs  push_pull.rs  push_pull_fanout.rs  req_rep.rs  router_dealer.rs
omq-tokio/examples/: bench_1push_8pull.rs  pub_sub_lz4.rs
omq-tokio/src/: blocking.rs  context.rs  lib.rs  proxy.rs  runtime_config.rs
omq-tokio/tests/: blake3zmq.rs  broker.rs  conflate.rs  connect_before_bind.rs  connection_errors.rs  context.rs  coverage_matrix.rs  curve.rs  double_close.rs  draft_types.rs  encode_slot_stress.rs  fuzz_parsers.rs  fuzz_socket_actions.rs  handshake_timeout.rs  heartbeat.rs  inproc_rebind.rs  inproc_recv_race.rs  inproc_subside.rs  interop_compio.rs  interop_compio_ws.rs  interop_libzmq_ws.rs  interop_pyzmq_curve.rs  interop_pyzmq_plain.rs  interop_ruby.rs  interop_ruby_blake3zmq.rs  interop_ruby_lz4.rs  interop_ruby_zstd.rs  ipc.rs  ipv6.rs  large_messages.rs  linger.rs  loom_signal.rs  lz4_pub_sub.rs  lz4_socket_types.rs  lz4_tcp.rs  lz4_ws.rs  mixed_transports.rs  monitor.rs  multi_peer.rs  omq_soak_compression_lz4.rs  (+69 more)
omq-zeromq/: CHANGELOG.md  Cargo.toml  README.md
omq-zeromq/src/: endpoint.rs  error.rs  lib.rs  message.rs  monitor.rs  options.rs  prelude.rs  proxy.rs  socket.rs  util.rs
omq-zeromq/tests/: close.rs  compatibility_gaps.rs  draft_sockets.rs  inproc.rs  monitor.rs  pair.rs  proxy.rs  pub_sub.rs  push_pull.rs  req_rep.rs  router_dealer.rs  smoke_compat.rs  xpub_xsub.rs
omq-zmq/: CHANGELOG.md  Cargo.toml  README.md
omq-zmq/examples/: bench_latency.rs  bench_recv.rs  bench_zero_copy.rs
omq-zmq/include/: zmq.h
omq-zmq/src/: context.rs  curve.rs  error.rs  inproc_bypass.rs  lib.rs  msg.rs  opts.rs  poll.rs  proxy.rs  send_recv.rs  socket.rs  util.rs
omq-zmq/tests/: basic.rs  ctx.rs  draft.rs  fd.rs  helpers.rs  libzmq_dealer_router.rs  libzmq_inproc.rs  libzmq_pair_tcp.rs  libzmq_pub_sub.rs  libzmq_push_pull.rs  libzmq_req_rep.rs  monitor.rs  multipart.rs  opts.rs  poll.rs  security.rs  transports.rs  util.rs  xpub_xsub.rs
omq/examples/: pub_sub_lz4.rs
omq/src/: lib.rs
scripts/rzmq_bench_peer/: Cargo.toml
tests/interop/: Cargo.toml
yring/: CHANGELOG.md  Cargo.toml  README.md
yring/benches/: comparison.rs  throughput.rs
yring/examples/: basic.rs
yring/scripts/: gen_chart.py
yring/src/: async.rs  compat.rs  lib.rs
yring/tests/: loom.rs
(+349 files in other folders)
