[package]
name = "blume"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Batching MPSC channel for cross-core message passing"
readme = "README.md"
keywords = ["mpsc", "channel", "batching", "async", "lock-free"]
categories = ["concurrency", "data-structures"]

[lints]
workspace = true

[dependencies]
event-listener = "5.4.0"

[dev-dependencies]
flume = { version = "0.12", default-features = false, features = ["async"] }
futures-lite = "2"

[[bench]]
name = "throughput"
harness = false
