[package]
name = "omq-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "omq-bench"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
libc = "0.2"
omq-tokio = { path = "../omq-tokio", default-features = false }
plotters = { version = "0.3", default-features = false, features = ["svg_backend", "line_series"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
