[package]
name = "omq-compio"
version = "0.12.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "compio backend for omq: thread-per-core io_uring/IOCP socket driver. Built on omq-proto."
readme = "README.md"
keywords = ["zeromq", "high-performance", "io-uring", "compio", "async"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "omq_compio"

[lints]
workspace = true

[features]
# Minimal default: NULL mechanism + TCP / IPC / inproc / UDP only.
# All crypto and compression features are opt-in.
default = []
curve = ["omq-proto/curve"]
blake3zmq = ["omq-proto/blake3zmq"]
plain = ["omq-proto/plain"]
lz4 = ["omq-proto/lz4"]
zstd = ["omq-proto/zstd"]
ws = ["omq-proto/ws", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:compio-tls"]
# Enables the fuzz test suites (`tests/fuzz_*.rs`). Off by default -
# those targets do ~1 M iterations each and dominate runtime of
# `cargo test`. Run with `cargo test --features fuzz`.
fuzz = []
soak = []

[dependencies]
omq-proto = { path = "../omq-proto", version = "0.16.0", default-features = false }
blume = { path = "../blume", version = "0.4.0" }
yring = { path = "../yring", version = "0.3.0" }
bytes = "1.11.0"
flume = { version = "0.12", default-features = false, features = ["async"] }
rustc-hash = "2.1.0"
concurrent-queue = "2.5.0"
futures = { version = "0.3", default-features = false, features = ["std", "async-await"] }
compio = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", features = ["macros", "net", "io", "bytes", "runtime", "io-uring", "time", "sync", "async-fd"] }
slab = "0.4"
event-listener = "5.4.0"
async-lock = "3.4.0"
socket2 = "0.6"
smallvec = { version = "1", features = ["const_generics", "union"] }
libc = "0.2"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
rustls-pki-types = { version = "1.14", optional = true }
compio-tls = { git = "https://github.com/compio-rs/compio.git", rev = "cf746eb8", optional = true, default-features = false, features = ["rustls"] }


[dev-dependencies]
atomic-waker = "1.1.0"
futures-lite = "2"
rand = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Used by benches/compression.rs to train a zstd dict from sample
# JSON records before driving the with-dict throughput cells.
zstd-safe = { version = "7", default-features = false, features = ["std", "zdict_builder"] }
rcgen = "0.14"

[[bench]]
name = "push_pull"
harness = false

[[bench]]
name = "pub_sub"
harness = false

[[bench]]
name = "req_rep"
harness = false

[[bench]]
name = "router_dealer"
harness = false

[[bench]]
name = "pair"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "push_pull_fanout"
harness = false

[[bench]]
name = "multithread_push_pull"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "client_server_latency"
harness = false

[[bench]]
name = "mechanism"
harness = false
required-features = ["plain", "curve", "blake3zmq"]

[[example]]
name = "profile_ws"
required-features = ["ws"]

[package.metadata.docs.rs]
all-features = true

