[package]
name = "omq-libzmq"
version = "0.4.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "libzmq-compatible C interface backed by omq (omq-tokio)."
readme = "README.md"
keywords = ["zeromq", "high-performance", "ffi", "libzmq", "c-api"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "omq_zmq"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
omq-tokio = { path = "../omq-tokio", version = "0.14.3", features = ["plain", "curve", "lz4"] }
yring = { path = "../yring", version = "0.3.1" }
tokio = { version = "1.52", features = ["rt", "rt-multi-thread", "sync", "time"] }
bytes = "1.11.0"
flume = { version = "0.12", default-features = false, features = ["async"] }
rustc-hash = "2.1.0"
crypto_box = "0.9"
libc = "0.2"

[dev-dependencies]
omq-tokio = { path = "../omq-tokio" }
libc = "0.2"
