[package]
name = "omq-libzmq"
version = "0.5.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "libzmq-compatible C interface backed by omq (omq-tokio)."
readme = "README.md"
keywords = ["zeromq", "high-performance", "ffi", "libzmq", "c-api"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "omq_zmq"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
omq-tokio = { path = "../omq-tokio", version = "0.18.0", features = ["plain", "curve", "lz4"] }
yring = { path = "../yring", version = "0.3.7" }
tokio = { version = "1.52", features = ["rt", "sync", "time"] }
bytes = "1.12.0"
flume = { version = "0.12", default-features = false, features = ["async"] }
rustc-hash = "2.1.0"
crypto_box = "0.9"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
omq-tokio = { path = "../omq-tokio" }
libc = "0.2"
serial_test = "3.2"
