[package]
name = "omq-libzmq"
version = "0.5.5"
edition.workspace = true
rust-version.workspace = true
autotests = false
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "libzmq-compatible C interface backed by omq (omq-tokio)."
readme = "README.md"
keywords = ["zeromq", "high-performance", "ffi", "libzmq", "c-api"]
categories = ["network-programming", "api-bindings"]

[lib]
name = "omq_zmq"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
omq-tokio = { path = "../omq-tokio", version = "0.19.2", features = ["plain", "curve", "lz4"] }
yring = { path = "../yring", version = "0.3.9" }
tokio = { version = "1.52", features = ["rt", "sync", "time"] }
bytes = "1.12.0"
flume = { version = "0.12", default-features = false, features = ["async"] }
rustc-hash = "2.1.0"
crypto_box = "0.9"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
    "Win32_System_Threading",
    "Win32_Security",
] }

[dev-dependencies]
omq-tokio = { path = "../omq-tokio" }
libc = "0.2"
serial_test = "3.2"

[[test]]
name = "omq_libzmq_basic"
path = "tests/basic.rs"

[[test]]
name = "omq_libzmq_ctx"
path = "tests/ctx.rs"

[[test]]
name = "omq_libzmq_draft"
path = "tests/draft.rs"

[[test]]
name = "omq_libzmq_fast_path_recovery"
path = "tests/fast_path_recovery.rs"

[[test]]
name = "omq_libzmq_fd"
path = "tests/fd.rs"

[[test]]
name = "omq_libzmq_helpers"
path = "tests/helpers.rs"

[[test]]
name = "omq_libzmq_libzmq_dealer_router"
path = "tests/libzmq_dealer_router.rs"

[[test]]
name = "omq_libzmq_libzmq_inproc"
path = "tests/libzmq_inproc.rs"

[[test]]
name = "omq_libzmq_libzmq_pair_tcp"
path = "tests/libzmq_pair_tcp.rs"

[[test]]
name = "omq_libzmq_libzmq_pub_sub"
path = "tests/libzmq_pub_sub.rs"

[[test]]
name = "omq_libzmq_libzmq_push_pull"
path = "tests/libzmq_push_pull.rs"

[[test]]
name = "omq_libzmq_libzmq_req_rep"
path = "tests/libzmq_req_rep.rs"

[[test]]
name = "omq_libzmq_monitor"
path = "tests/monitor.rs"

[[test]]
name = "omq_libzmq_multipart"
path = "tests/multipart.rs"

[[test]]
name = "omq_libzmq_opts"
path = "tests/opts.rs"

[[test]]
name = "omq_libzmq_poll"
path = "tests/poll.rs"

[[test]]
name = "omq_libzmq_proxy"
path = "tests/proxy.rs"

[[test]]
name = "omq_libzmq_security"
path = "tests/security.rs"

[[test]]
name = "omq_libzmq_transports"
path = "tests/transports.rs"

[[test]]
name = "omq_libzmq_util"
path = "tests/util.rs"

[[test]]
name = "omq_libzmq_xpub_xsub"
path = "tests/xpub_xsub.rs"
