[package]
name = "omq-proto"
version = "0.23.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sans-I/O ZMTP codec, message types, and routing logic. Backend-agnostic core for omq."
readme = "README.md"
keywords = ["zeromq", "high-performance", "protocol", "codec", "sans-io"]
categories = ["network-programming", "parser-implementations"]

[lints]
workspace = true

[features]
# Minimal default: NULL mechanism + TCP / IPC / inproc / UDP only.
# No C compiler required, no crypto deps. Opt in to features:
#   curve     CURVE encrypted-handshake (RFC 26)
#   lz4       lz4+tcp:// transport (pure Rust; lz4rip)
default = []
curve = ["dep:crypto_box", "dep:crypto_secretbox", "dep:subtle", "dep:x25519-dalek", "dep:zeroize"]
plain = []
lz4 = ["dep:lz4rip"]
ws = []
soak = []

[dependencies]
bytes = "1.12.0"
crypto_box = { version = "0.9", optional = true }
crypto_secretbox = { version = "0.1", optional = true }
subtle = { version = "2.6", optional = true }
x25519-dalek = { version = "3", features = ["static_secrets", "getrandom"], optional = true }
rand = "0.10"
patricia_tree = "0.10"
smallvec = { version = "1", features = ["const_generics", "union"] }
socket2 = { version = "0.6", features = ["all"] }
thiserror = "2.0.18"
zeroize = { version = "1.8.0", features = ["zeroize_derive"], optional = true }

[dependencies.lz4rip]
git = "https://github.com/paddor/lz4rip"
rev = "2e02fe810c6b809ff8f7cd16102058a1b59d4b47"
default-features = false
features = ["std"]
optional = true

[[bench]]
name = "mechanism_frame"
harness = false
required-features = ["curve"]

[package.metadata.docs.rs]
all-features = true
