[package]
name = "omq-tokio"
version = "0.13.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tokio backend for omq: TCP / IPC / inproc / UDP transports + tokio-runtime socket driver. Built on omq-proto."
readme = "README.md"
keywords = ["zeromq", "high-performance", "tokio", "async", "ipc"]
categories = ["network-programming", "asynchronous"]

[lints]
workspace = true

[features]
# Minimal default: NULL mechanism + TCP / IPC / inproc / UDP only.
# All crypto and compression features are opt-in. See `omq-proto`'s
# Cargo.toml for the catalog.
default = []
curve = ["omq-proto/curve"]
blake3zmq = ["omq-proto/blake3zmq"]
plain = ["omq-proto/plain"]
lz4 = ["omq-proto/lz4"]
zstd = ["omq-proto/zstd"]
ws = ["omq-proto/ws", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:tokio-rustls"]
priority = ["omq-proto/priority"]
# Enables the fuzz test suites (`tests/fuzz_*.rs`). Off by default -
# those targets do ~1 M iterations each and dominate runtime of
# `cargo test`. Run with `cargo test --features fuzz`.
fuzz = []
soak = []

[dependencies]
omq-proto = { path = "../omq-proto", version = "0.15.0", default-features = false }
yring = { path = "../yring", version = "0.2.2" }
async-channel = "2.5.0"
bytes = "1.11.0"
concurrent-queue = "2.5.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.10"
rustc-hash = "2.1.0"
smallvec = { version = "1", features = ["const_generics", "union"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
socket2 = "0.6"
libc = "0.2"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2", optional = true }
rustls-pki-types = { version = "1", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1.52.0", features = ["test-util"] }
rcgen = "0.14"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
# Cross-runtime interop tests drive a compio backend on a dedicated
# thread while the tokio backend runs in the test's own runtime.
omq-compio = { path = "../omq-compio", default-features = false, features = ["ws"] }
compio = { git = "https://github.com/compio-rs/compio.git", tag = "v0.19.0-rc.2", features = ["macros", "net", "io", "bytes", "runtime", "io-uring", "time", "sync"] }
zstd-safe = { version = "7", default-features = false, features = ["std", "zdict_builder"] }

[[bin]]
name = "bench_peer_tokio"
path = "src/bin/bench_peer_tokio.rs"

[[example]]
name = "pub_sub_lz4"
required-features = ["lz4"]

[[bench]]
name = "push_pull"
harness = false

[[bench]]
name = "pub_sub"
harness = false

[[bench]]
name = "req_rep"
harness = false

[[bench]]
name = "router_dealer"
harness = false

[[bench]]
name = "pair"
harness = false

[[bench]]
name = "push_pull_fanout"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "client_server_latency"
harness = false

[[bench]]
name = "compression"
harness = false

[package.metadata.docs.rs]
all-features = true
