[package]
name = "omq-tokio"
version = "0.19.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tokio backend for omq: TCP / IPC / inproc / UDP transports + tokio-runtime socket driver. Built on omq-proto."
readme = "README.md"
keywords = ["zeromq", "high-performance", "tokio", "async", "ipc"]
categories = ["network-programming", "asynchronous"]

[lints]
workspace = true

[features]
# Minimal default: NULL mechanism + TCP / IPC / inproc / UDP only.
# All crypto and compression features are opt-in. See `omq-proto`'s
# Cargo.toml for the catalog.
default = []
curve = ["omq-proto/curve"]
plain = ["omq-proto/plain"]
lz4 = ["omq-proto/lz4"]
ws = ["omq-proto/ws", "dep:rustls", "dep:rustls-native-certs", "dep:rustls-pemfile", "dep:rustls-pki-types", "dep:tokio-rustls"]
# Enables the fuzz test suites (`tests/fuzz_*.rs`). Off by default -
# those targets do ~1 M iterations each and dominate runtime of
# `cargo test`. Run with `cargo test --features fuzz`.
fuzz = []
soak = []

[dependencies]
omq-proto = { path = "../omq-proto", version = "0.23.0", default-features = false }
yring = { path = "../yring", version = "0.3.8" }
blume = { path = "../blume", version = "0.4.5" }
arc-swap = "1.7.1"
bytes = "1.12.0"
concurrent-queue = "2.5.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
rand = "0.10"
rustc-hash = "2.1.0"
smallvec = { version = "1", features = ["const_generics", "union"] }
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["rt", "net", "io-util", "sync", "macros", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
socket2 = "0.6"
libc = "0.2"
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
rustls-native-certs = { version = "0.8", optional = true }
rustls-pemfile = { version = "2.2", optional = true }
rustls-pki-types = { version = "1.14", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
tokio = { version = "1.52.0", features = ["test-util", "rt-multi-thread"] }
rcgen = "0.14"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[[bin]]
name = "omq_bench_peer_tokio"
path = "src/bin/bench_peer_tokio.rs"

[[bin]]
name = "omq_bench_peer_blocking"
path = "src/bin/bench_peer_blocking.rs"

[[bin]]
name = "omq_bench_proxy_client"
path = "src/bin/bench_proxy_client.rs"

[[bin]]
name = "omq_perf_verify"
path = "src/bin/perf_verify.rs"

[[example]]
name = "pub_sub_lz4"
required-features = ["lz4"]

[[bench]]
name = "push_pull"
harness = false

[[bench]]
name = "inproc_threads"
harness = false

[[bench]]
name = "pub_sub"
harness = false

[[bench]]
name = "req_rep"
harness = false

[[bench]]
name = "router_dealer"
harness = false

[[bench]]
name = "pair"
harness = false

[[bench]]
name = "push_pull_fanout"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "client_server_latency"
harness = false

[[bench]]
name = "mechanism"
harness = false
required-features = ["plain"]

[[bench]]
name = "compression"
harness = false

[package.metadata.docs.rs]
all-features = true
