[package]
name = "omq-zeromq"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Drop-in zeromq crate replacement backed by omq-tokio"

[lib]
name = "zeromq"

[lints]
workspace = true

[dependencies]
omq-tokio = { path = "../omq-tokio", version = "0.7.0", default-features = false }
omq-proto = { path = "../omq-proto", version = "0.9.0", default-features = false }
bytes = "1"
libc = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
futures-channel = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
trybuild = "1"

[[bin]]
name = "bench_peer_zeromq"
path = "src/bin/bench_peer_zeromq.rs"

[features]
default = []
ipc-transport = []
