[package]
name = "omq-zeromq"
version = "0.6.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Drop-in zeromq crate replacement backed by omq-tokio"
readme = "README.md"
keywords = ["zeromq", "zmq", "drop-in", "async"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "zeromq"

[lints]
workspace = true

[dependencies]
omq-tokio = { path = "../omq-tokio", version = "0.11.1", default-features = false }
omq-proto = { path = "../omq-proto", version = "0.13.0", default-features = false }
bytes = "1"
libc = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt-multi-thread", "macros"] }

[dev-dependencies]
futures-channel = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
trybuild = "1"

[[bin]]
name = "bench_peer_zeromq"
path = "src/bin/bench_peer_zeromq.rs"

[features]
default = []
ipc-transport = []

[package.metadata.docs.rs]
all-features = true
