[package]
name = "omq-zmq"
version = "0.1.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "libzmq-compatible C interface backed by omq (omq-compio)."

[lib]
name = "omq_zmq"
crate-type = ["cdylib", "staticlib", "rlib"]

[lints]
workspace = true

[dependencies]
omq-compio = { path = "../omq-compio", version = "0.7.0", features = ["plain", "curve", "lz4", "zstd"] }
yring = { path = "../yring", version = "0.2.0" }
compio = { version = "0.19.0-rc.1", features = ["runtime"] }
bytes = "1"
flume = { version = "0.12", default-features = false, features = ["async"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
crypto_box = "0.9"
libc = "0.2"

[dev-dependencies]
omq-compio = { path = "../omq-compio" }
libc = "0.2"
