[package]
name = "omq"
version = "0.12.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pure Rust ØMQ/ZeroMQ. Facade over omq-compio (default) or omq-tokio. Wire-compatible with libzmq."
readme = "README.md"
keywords = ["zeromq", "zmq", "messaging", "networking", "async"]
categories = ["network-programming", "asynchronous"]

[lints]
workspace = true

[features]
# Pick exactly one backend. compio is the default; tokio-backend is
# for callers already invested in a tokio runtime. Enabling both is a
# compile-time error.
default = ["compio-backend"]
compio-backend = ["dep:omq-compio"]
tokio-backend = ["dep:omq-tokio"]

# Per-feature passthroughs. Each gates the same name on whichever
# backend the consumer selected.
curve = [
  "omq-compio?/curve",
  "omq-tokio?/curve",
]
blake3zmq = [
  "omq-compio?/blake3zmq",
  "omq-tokio?/blake3zmq",
]
plain = [
  "omq-compio?/plain",
  "omq-tokio?/plain",
]
lz4 = [
  "omq-compio?/lz4",
  "omq-tokio?/lz4",
]
zstd = [
  "omq-compio?/zstd",
  "omq-tokio?/zstd",
]
ws = [
  "omq-compio?/ws",
  "omq-tokio?/ws",
]
priority = [
  "omq-compio?/priority",
  "omq-tokio?/priority",
]

[dependencies]
omq-compio = { path = "../omq-compio", version = "0.11.0", default-features = false, optional = true }
omq-tokio  = { path = "../omq-tokio",  version = "0.12.1", default-features = false, optional = true }

[package.metadata.docs.rs]
features = ["compio-backend", "curve", "blake3zmq", "plain", "lz4", "zstd", "ws", "priority"]
rustdoc-args = ["--cfg", "docsrs"]
