[package]
name = "yring"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bounded SPSC ring with ypipe-style batched flush/prefetch"
readme = "README.md"
keywords = ["spsc", "ring-buffer", "lock-free", "ypipe", "batching"]
categories = ["concurrency", "data-structures"]

[lints]
workspace = true
