[package]
name = "yring"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Bounded SPSC ring with ypipe-style batched flush/prefetch"
readme = "README.md"
keywords = ["spsc", "ring-buffer", "lock-free", "ypipe", "batching"]
categories = ["concurrency", "data-structures"]

[features]
default = []
async = ["dep:atomic-waker", "dep:futures-core"]

[dependencies]
atomic-waker = { version = "1", optional = true }
futures-core = { version = "0.3", optional = true, default-features = false }

[dev-dependencies]
futures-lite = "2"

[[bench]]
name = "throughput"
harness = false

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
